# hotpatch

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT  INSTALL  Makefile  README
include/: CMakeLists.txt  config.h.in  dyldo.h  hotpatch.h  hotpatch_internal.h
src/: CMakeLists.txt  asm2hdr.pl  call32.s  call64.s  dlopen64.s  dyldo.c  exedetails.c  hotpatch.c  loader.c  main.c
test/: CMakeLists.txt  asmtest.c  cpptest.cpp  ctest.c  dlltest.c  dummy.c  loader.c  ptrace.c  self.c
